# LLM-QA-Lab

./: .env.example  .gitignore  README.md  compare_models.py  pyproject.toml  requirements.txt  run_qa_suite.py  simple_test.py  test_imports.py
config/: default.yaml
src/core/: __init__.py  llm_client.py
src/tests/: __init__.py  test_accuracy.py
src/utils/: config_loader.py  logger.py
